--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="title">ohmyfood</h1>
     </header>
     <section class="city">
-      <i class="fa-solid fa-location-dot"></i>
+      <i class="fa-regular fa-heart"></i>
       <span class="text"> Paris, Belleville</span>
     </section>
     <section class="explorer">
@@ -49,6 +49,7 @@
             <div class="card__description"><h3>La palette du goût</h3>
             <p>Ménilmontant</p>
             <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i>
           </div>
           </a>
           <a href="#" class="card new">
