--- a/index.html
+++ b/index.html
@@ -48,29 +48,27 @@
             <div class="card__image card__image-1"></div>
             <div class="card__description"><h3>La palette du goût</h3>
             <p>Ménilmontant</p>
-            <i class="fa-regular fa-heart"></i>
-            <i class="fa-solid fa-heart"></i>
           </div>
           </a>
           <a href="#" class="card new">
             <div class="card__image card__image-2"></div>
             <div class="card__description"><h3>La note enchantée</h3>
             <p>Charonne</p>
-            <i class="fa-regular fa-heart"></i>
+
           </div>
           </a>
           <a href="#" class="card">
             <div class="card__image card__image-3"></div>
             <div class="card__description"><h3>À la française</h3>
             <p>Cité rouge</p>
-            <i class="fa-regular fa-heart"></i>
+
           </div>
           </a>
           <a href="#" class="card">
             <div class="card__image card__image-4"></div>
             <div class="card__description"><h3>Le délice des sens</h3>
             <p>Folie-Méricourt</p>
-            <i class="fa-regular fa-heart"></i></div>
+          </div>
           </a>       
         </div>
       </section>
