--- a/pages/resto-1.html
+++ b/pages/resto-1.html
@@ -18,7 +18,7 @@
     </header></a>
     <div class="preview"><img src="../images/menu-1.jpg" /></div>
     <div class="resto__title">
-      <h2>La palette du goût<i class="fa-regular fa-heart"></i></h2>
+      <h2>La palette du goût</i></h2>
     </div>
     <main class="resto-main">
       <section class="menus">
