media queries et ajout pages restos

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Oh My Food</title>
     <script
       src="https://kit.fontawesome.com/42398193b8.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" >
   </head>
   <body id="home-page">
     <div class="loader"></div>
@@ -17,12 +17,12 @@
       <h1 class="title">ohmyfood</h1>
     </header>
     <section class="city">
-      <i class="fa-regular fa-heart"></i>
-      <span class="text"> Paris, Belleville</span>
+      <i class="fa-solid fa-location-dot"></i>
+      <h2> Paris, Belleville</h2>
     </section>
     <section class="explorer">
       <h2 class="explorer__title">
-        Réservez le menu qui<br />
+        Réservez le menu qui<br>
         vous convient
       </h2>
       <p class="explorer__subtitle">
@@ -34,9 +34,16 @@
       <div class="container">
         <h2>Fonctionnement</h2>
         <ol>
-          <li><i class="fa-mobile-alt fas"></i><span>Choisissez un restaurant</span></li>
-          <li><i class="fa-list-ul fas"></i><span>Composez votre menu</span></li>
-          <li><i class="fa-store fas"></i><span>Dégustez au restaurant</span></li>
+          <li>
+            <i class="fa-mobile-alt fas"></i
+            ><span>Choisissez un restaurant</span>
+          </li>
+          <li>
+            <i class="fa-list-ul fas"></i><span>Composez votre menu</span>
+          </li>
+          <li>
+            <i class="fa-store fas"></i><span>Dégustez au restaurant</span>
+          </li>
         </ol>
       </div>
     </section>
@@ -46,30 +53,32 @@
         <div class="menus__container">
           <a href="pages/resto-1.html" class="card new">
             <div class="card__image card__image-1"></div>
-            <div class="card__description"><h3>La palette du goût</h3>
-            <p>Ménilmontant</p>
-          </div>
+            <div class="card__description">
+              <h3>La palette du goût</h3>
+              <p>Ménilmontant</p>
+            </div>
           </a>
           <a href="#" class="card new">
             <div class="card__image card__image-2"></div>
-            <div class="card__description"><h3>La note enchantée</h3>
-            <p>Charonne</p>
-
-          </div>
+            <div class="card__description">
+              <h3>La note enchantée</h3>
+              <p>Charonne</p>
+            </div>
           </a>
           <a href="#" class="card">
             <div class="card__image card__image-3"></div>
-            <div class="card__description"><h3>À la française</h3>
-            <p>Cité rouge</p>
-
-          </div>
+            <div class="card__description">
+              <h3>À la française</h3>
+              <p>Cité rouge</p>
+            </div>
           </a>
           <a href="#" class="card">
             <div class="card__image card__image-4"></div>
-            <div class="card__description"><h3>Le délice des sens</h3>
-            <p>Folie-Méricourt</p>
-          </div>
-          </a>       
+            <div class="card__description">
+              <h3>Le délice des sens</h3>
+              <p>Folie-Méricourt</p>
+            </div>
+          </a>
         </div>
       </section>
     </main>
@@ -78,7 +87,7 @@
       <p><i class="fa-solid fa-utensils"></i>Proposer un restaurant</p>
       <p><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</p>
       <p>Mentions légales</p>
-   <a href="mailto:contact@ohmyfood.com">Contact</a>
+      <a href="mailto:contact@ohmyfood.com">Contact</a>
     </footer>
   </body>
 </html>
