--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
       <section class="menus">
         <h2>Restaurants</h2>
         <div class="menus__container">
-          <a href="pages/resto-1.html" class="card new">
+          <a href="./pages/resto-1.html" class="card new">
             <div class="card__image card__image-1"></div>
             <div class="card__description">
               <h3>La palette du goût</h3>
               <p>Ménilmontant</p>
             </div>
           </a>
-          <a href="#" class="card new">
+          <a href="./pages/resto-2.html" class="card new">
             <div class="card__image card__image-2"></div>
             <div class="card__description">
               <h3>La note enchantée</h3>
               <p>Charonne</p>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="./pages/resto-3.html" class="card">
             <div class="card__image card__image-3"></div>
             <div class="card__description">
               <h3>À la française</h3>
               <p>Cité rouge</p>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="./pages/resto-4.html" class="card">
             <div class="card__image card__image-4"></div>
             <div class="card__description">
               <h3>Le délice des sens</h3>
