--- a/pages/resto-2.html
+++ b/pages/resto-2.html
@@ -16,10 +16,10 @@
       <i class="fa-arrow-left fas header__arrow"></i>
       <h1 class="title">ohmyfood</h1>
     </header></a>
-    <div class="preview"><img src="../images/menu-1.jpg"  alt="photo du plat"></div>
+    <div class="preview"><img src="../images/menu-2.jpg"  alt="photo du plat"></div>
     <div class="large">
       <div class="resto__title">
-        <h2>La palette du goût</h2>
+        <h2>La note enchantée</h2>
       </div>
       <main class="resto-main">
         <section class="menus">
