--- a/pages/resto-1.html
+++ b/pages/resto-1.html
@@ -111,7 +111,7 @@
               <div class="menu-item">
                 <div class="menu-item__description">
                   <h4>Macaron au chocolat d'exception</h4>
-                  <p>Et glace à la vanille de Madagasca</p>
+                  <p>Et glace à la vanille de Madagascar</p>
                 </div>
                 <span class="menu-item__price">22€</span>
                 <div class="menu-item__checked">
