--- a/pages/resto-2.html
+++ b/pages/resto-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>La palette du goût</title>
+    <title>La note enchantée</title>
     <script
       src="https://kit.fontawesome.com/42398193b8.js"
       crossorigin="anonymous"
@@ -29,8 +29,8 @@
             <div class="menu__category__list">
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Fricassée d'escargot</h4>
-                  <p>Au piment d'Espelette</p>
+                  <h4>Ravioles de foie gras</h4>
+                  <p>Accompagnés de leur crème à la truffe</p>
                 </div>
                 <span class="menu-item__price">25€</span>
                 <div class="menu-item__checked">
@@ -39,8 +39,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Foie gras de canard mi-cuit</h4>
-                  <p>Et ses copeaux de truffe noire</p>
+                  <h4>Caviar osciètre</h4>
+                  <p>Sur blini à la farine de blé noir</p>
                 </div>
                 <span class="menu-item__price">35€</span>
                 <div class="menu-item__checked">
@@ -49,10 +49,20 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Oeuf au plat</h4>
-                  <p>Assaisonné à la truffe sur lit de poireaux</p>
+                  <h4>Homard et espuma de potiron</h4>
+                  <p>Mariné aux zestes d'orange</p>
                 </div>
                 <span class="menu-item__price">20€</span>
+                <div class="menu-item__checked">
+                  <i class="fas fa-check"></i>
+                </div>
+              </div>
+              <div class="menu-item">
+                <div class="menu-item__description">
+                  <h4>Foie gras de canard cuit entier</h4>
+                  <p>Confiture de figue et pain toasté</p>
+                </div>
+                <span class="menu-item__price">35€</span>
                 <div class="menu-item__checked">
                   <i class="fas fa-check"></i>
                 </div>
@@ -65,8 +75,8 @@
             <div class="menu__category__list">
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Filet de boeuf aux herbes</h4>
-                  <p>Accompagné de sa ribambelle de légumes</p>
+                  <h4>Noix de coquilles Saint-Jacques</h4>
+                  <p>Sur lit de purée de céleri-rave</p>
                 </div>
                 <span class="menu-item__price">40€</span>
                 <div class="menu-item__checked">
@@ -75,8 +85,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Parmentier de queue de boeuf</h4>
-                  <p>A la truffe noire sur sa purée de panais</p>
+                  <h4>Langoustine poêlée</h4>
+                  <p>Purée de patate douce</p>
                 </div>
                 <span class="menu-item__price">35€</span>
                 <div class="menu-item__checked">
@@ -85,8 +95,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Filet de Turbot</h4>
-                  <p>Aux agrumes</p>
+                  <h4>Mijoté de queue de boeuf</h4>
+                  <p>Et riz sauvage aux zestes de citron</p>
                 </div>
                 <span class="menu-item__price">44€</span>
                 <div class="menu-item__checked">
@@ -100,8 +110,8 @@
             <div class="menu__category__list">
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Paris-Brest</h4>
-                  <p>Revisité</p>
+                  <h4>Macaron noisette et chocolat</h4>
+                  <p>Glace au caramel brun et sel de Guérande</p>
                 </div>
                 <span class="menu-item__price">18€</span>
                 <div class="menu-item__checked">
@@ -110,8 +120,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Macaron au chocolat d'exception</h4>
-                  <p>Et glace à la vanille de Madagasca</p>
+                  <h4>Baba au rhum revisité</h4>
+                  <p>Avec son coulis de citron</p>
                 </div>
                 <span class="menu-item__price">22€</span>
                 <div class="menu-item__checked">
@@ -120,8 +130,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Mousse au chocolat</h4>
-                  <p>Au piment d'espelette et à la truffe noire</p>
+                  <h4>Tarte au citron meringuée</h4>
+                  <p>Déstructurée</p>
                 </div>
                 <span class="menu-item__price">23€</span>
                 <div class="menu-item__checked">
