--- a/pages/resto-3.html
+++ b/pages/resto-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>La palette du goût</title>
+    <title>À la française</title>
     <script
       src="https://kit.fontawesome.com/42398193b8.js"
       crossorigin="anonymous"
@@ -19,7 +19,7 @@
     <div class="preview"><img src="../images/menu-3.jpg"  alt="photo du plat"></div>
     <div class="large">
       <div class="resto__title">
-        <h2>La palette du goût</h2>
+        <h2>À la française</h2>
       </div>
       <main class="resto-main">
         <section class="menus">
@@ -29,8 +29,8 @@
             <div class="menu__category__list">
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Fricassée d'escargot</h4>
-                  <p>Au piment d'Espelette</p>
+                  <h4>Tartare de poulpe acidulé</h4>
+                  <p>Aux zestes d'orange</p>
                 </div>
                 <span class="menu-item__price">25€</span>
                 <div class="menu-item__checked">
@@ -39,8 +39,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Foie gras de canard mi-cuit</h4>
-                  <p>Et ses copeaux de truffe noire</p>
+                  <h4>Velouté de légumes d'antan</h4>
+                  <p>Carotte, panais, topinambour</p>
                 </div>
                 <span class="menu-item__price">35€</span>
                 <div class="menu-item__checked">
@@ -49,7 +49,7 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Oeuf au plat</h4>
+                  <h4>Revisitée</h4>
                   <p>Assaisonné à la truffe sur lit de poireaux</p>
                 </div>
                 <span class="menu-item__price">20€</span>
@@ -65,8 +65,8 @@
             <div class="menu__category__list">
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Filet de boeuf aux herbes</h4>
-                  <p>Accompagné de sa ribambelle de légumes</p>
+                  <h4>Coquilles Saint-Jacques</h4>
+                  <p>Accompagnées d'une purée de panais</p>
                 </div>
                 <span class="menu-item__price">40€</span>
                 <div class="menu-item__checked">
@@ -75,8 +75,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Parmentier de queue de boeuf</h4>
-                  <p>A la truffe noire sur sa purée de panais</p>
+                  <h4>Magret de canard</h4>
+                  <p>Et parmentier de pommes de terre</p>
                 </div>
                 <span class="menu-item__price">35€</span>
                 <div class="menu-item__checked">
@@ -85,8 +85,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Filet de Turbot</h4>
-                  <p>Aux agrumes</p>
+                  <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                  <p>Sur son lit de gnocchis aux légumes</p>
                 </div>
                 <span class="menu-item__price">44€</span>
                 <div class="menu-item__checked">
@@ -100,7 +100,7 @@
             <div class="menu__category__list">
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Paris-Brest</h4>
+                  <h4>Pétales de violettes glacés</h4>
                   <p>Revisité</p>
                 </div>
                 <span class="menu-item__price">18€</span>
@@ -110,8 +110,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Macaron au chocolat d'exception</h4>
-                  <p>Et glace à la vanille de Madagasca</p>
+                  <h4>Fondant au chocolat</h4>
+                  <p>Revisité</p>
                 </div>
                 <span class="menu-item__price">22€</span>
                 <div class="menu-item__checked">
@@ -120,8 +120,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Mousse au chocolat</h4>
-                  <p>Au piment d'espelette et à la truffe noire</p>
+                  <h4>Millefeuille croustillant</h4>
+                  <p>Myrtilles et pâte d’amande</p>
                 </div>
                 <span class="menu-item__price">23€</span>
                 <div class="menu-item__checked">
