--- a/pages/resto-4.html
+++ b/pages/resto-4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>La palette du goût</title>
+    <title>Le délice des sens</title>
     <script
       src="https://kit.fontawesome.com/42398193b8.js"
       crossorigin="anonymous"
@@ -29,8 +29,8 @@
             <div class="menu__category__list">
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Fricassée d'escargot</h4>
-                  <p>Au piment d'Espelette</p>
+                  <h4>Tartare de thon</h4>
+                  <p>Assaisonné au yuzu</p>
                 </div>
                 <span class="menu-item__price">25€</span>
                 <div class="menu-item__checked">
@@ -39,8 +39,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Foie gras de canard mi-cuit</h4>
-                  <p>Et ses copeaux de truffe noire</p>
+                  <h4>Bouchée de homard croustillant</h4>
+                  <p>Et sa farandole de petits légumes</p>
                 </div>
                 <span class="menu-item__price">35€</span>
                 <div class="menu-item__checked">
@@ -49,8 +49,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Oeuf au plat</h4>
-                  <p>Assaisonné à la truffe sur lit de poireaux</p>
+                  <h4>Velouté de cèpes</h4>
+                  <p>Aux truffes</p>
                 </div>
                 <span class="menu-item__price">20€</span>
                 <div class="menu-item__checked">
@@ -65,8 +65,8 @@
             <div class="menu__category__list">
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Filet de boeuf aux herbes</h4>
-                  <p>Accompagné de sa ribambelle de légumes</p>
+                  <h4>Poulet rôti aux herbes de Provence </h4>
+                  <p>Et sa crème de truffe</p>
                 </div>
                 <span class="menu-item__price">40€</span>
                 <div class="menu-item__checked">
@@ -75,8 +75,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Parmentier de queue de boeuf</h4>
-                  <p>A la truffe noire sur sa purée de panais</p>
+                  <h4>Langouste rôtie</h4>
+                  <p>Et ses légumes de saison</p>
                 </div>
                 <span class="menu-item__price">35€</span>
                 <div class="menu-item__checked">
@@ -85,8 +85,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Filet de Turbot</h4>
-                  <p>Aux agrumes</p>
+                  <h4>Côte de boeuf Angus</h4>
+                  <p>Et sa purée de panais</p>
                 </div>
                 <span class="menu-item__price">44€</span>
                 <div class="menu-item__checked">
@@ -100,8 +100,8 @@
             <div class="menu__category__list">
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Paris-Brest</h4>
-                  <p>Revisité</p>
+                  <h4>Farandole de desserts</h4>
+                  <p>Du chef</p>
                 </div>
                 <span class="menu-item__price">18€</span>
                 <div class="menu-item__checked">
@@ -110,8 +110,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Macaron au chocolat d'exception</h4>
-                  <p>Et glace à la vanille de Madagasca</p>
+                  <h4>Crème brulée</h4>
+                  <p>Revisitée</p>
                 </div>
                 <span class="menu-item__price">22€</span>
                 <div class="menu-item__checked">
@@ -120,8 +120,8 @@
               </div>
               <div class="menu-item">
                 <div class="menu-item__description">
-                  <h4>Mousse au chocolat</h4>
-                  <p>Au piment d'espelette et à la truffe noire</p>
+                  <h4>Tiramisu </h4>
+                  <p>À la noisette</p>
                 </div>
                 <span class="menu-item__price">23€</span>
                 <div class="menu-item__checked">
