--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/42398193b8.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="build/style.css" >
   </head>
   <body id="home-page">
     <div class="loader"></div>
